--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
                     Working on integrating data from different sources including, GroupMe, Slack, etc into a single database. Further working on a web app to displying availiabity of mentors.
                 </p>
             </div>
-
+	</div>
+    </div>
            
     <!-- End #experience -->
 
