--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Hey, there! I am Abhineet Kulkarni, a recent graduate from the University of Florida. I got my Masters degree recently, majoring in Computer Science. I also have a Bachelors degree in Computer Engineering from the University of Pune, India. Recently, I have been volunteering with JerseySTEM, an organization based in New Jersey for encouraging middle school children towards careers in STEM. During my Masters degree program, I tried to take a variety of different courses which would help me broaden my horizons. I am currently looking for full time opportunites. If you need any further information feel free to contact me. Have a great day! 
+                        Hey, there! I am Abhineet Kulkarni, a recent graduate from the University of Florida. I got my Masters degree recently, majoring in Computer Science. I also have a Bachelors degree in Computer Engineering from the University of Pune, India. Recently, I have been volunteering with JerseySTEM, an organization based in New Jersey for encouraging middle school children towards careers in STEM. During my Masters degree program, I tried to take a variety of different courses which would help me broaden my horizons. I am currently looking for full time opportunites. If you need any further information feel free to contact me.
                     </p>
                 </div>
             </div>
@@ -105,18 +105,18 @@
             <h4>Master of Science in Computer Science</h4>
             <p>
                 Graduated with a GPA of 3.53. 
-				Coursework: Analysis of Algorithms, Advanced Data Structures, Programming Languape Principles
+		<br>Coursework: Analysis of Algorithms, Advanced Data Structures, Programming Languape Principles
             </p>
         </div>
         <!-- End .education-block -->
 
         <div class="education-block">
             <h3>University of Pune</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
+            <span class="education-date">Aug 2012 - July 2017</span>
             <h4>Bachelor of Engineering in Computer Engineering</h4>
             <p>
                 Graduated with a GPA of 64.13/100. 
-				Coursework: Web Technologies, Object Oriented and Multicore Programming, Computer Networks.
+		<br>Coursework: Web Technologies, Object Oriented and Multicore Programming, Computer Networks.
             </p>
         </div>
         <!-- End .education-block -->
@@ -151,12 +151,12 @@
                     </div>
 					<div class="project-info">
                         <h3>Cloud-Edge-Device Architecture based IoT Platform</h3>
-						<h4>Technologies: Java (Junit, ASM Bytecode framework)</h4>
+						<h4>Technologies: C, C++, JavaScript (Node.js, Express)</h4>
                         <ul>
 							<li>Built an IoT prototype platform using Xinu OS for Beagle Bone Black, developed device drivers with object oriented interfaces in Xinu along with energy efficient process scheduling for each device
 							<li>Designed and implemented a MQTT-SN style publish/subscribe protocol using C++ and Node.js for edge-device communication and RESTful APIs using Node.js for cloud-edge communication
 						</ul>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/abhi789/Prototype-IOT-solution-to-externalize-sensor-based-platform-services-to-the-cloud">View Project</a>
 						<!-- End .project-info -->
                     </div>
 				</div>
@@ -173,7 +173,7 @@
 							<li>Implemented and compared priority queues using binary heap, pairing heap, and four-way cache optimized heap(based on a cache size of 64kb, reduced cache misses by 50%) in Java
 							<li>Designed and developed an encoder and decoder based on Huffman tree generated using a four-way cache optimized heap, and performed tests on a file with 10 million records
 						</ul>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/abhi789/Huffman_Coding_Decoding">View Project</a>
                     </div>
 					<!-- End .project-info -->
 				</div>
@@ -190,7 +190,7 @@
 							<li>Helped design and implement the UI and game mechanics: points, scoreboard, levels, game difficulty
 							<li>Implemented the algorithm in JavaScript
 						</ul>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/abhi789/BioPhyle">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
