--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 				
 				<div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/compression.jpg" />
+                        <img src="images/project.jpg" />
                     </div>
 					<div class="project-info">
                         <h3>Lossless Data Compression using Huffman Encoding</h3>
