--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                     </div>
 					<div class="project-info">
                         <h3>CarLexa, HackDuke 17</h3>
-						<h4>JavaScript (Node.js, Alexa SDK)</h4>
+						<h4>Technologies: JavaScript (Node.js, Alexa SDK)</h4>
                         <ul>
 							<li>Developed an Alexa Skill to receive status updates of the car: door locking status, odometer reading, using Smartcar API
 							<li>The skill could also be used to send control messages to the car: honk, lock car; Tested the skill on a Tesla
